--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <h1>Miguel</h1>
     <h2>Lebron James</h2>
     Miguel
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Similique ipsa aperiam, nulla dolore itaque eum temporibus sed sequi consectetur fuga. Enim itaque harum quod perferendis maiores asperiores modi beatae aspernatur.
+    </p>
+
+
+    
 </body>
 </html>
