--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     Miguel
 
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Similique ipsa aperiam, nulla dolore itaque eum temporibus sed sequi consectetur fuga. Enim itaque harum quod perferendis maiores asperiores modi beatae aspernatur.
+        Lorem ipsum dolor sit amet consectetur adipisicing <br>
+        Similique ipsa aperiam, nulla dolore itaque eum temporibus sed sequi consectetur fuga. <br>
+         Enim itaque harum quod perferendis maiores asperiores modi beatae aspernatur. <br>
     </p>
 
 
-    
+
 </body>
 </html>
